--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,14 @@
+.bigContainer {
+    text-align: center;
+    margin-top: 250px;
 
-/* 
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
 
-*/
+.bigContainer div{
+    display: inline;
+    font-size: 50px;
+    background-color: rgb(19, 20, 20);
+    color:white;
+    padding: 15px;
+}
